--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,22 @@
 [package]
 name = "piston-test"
 version = "0.0.1"
-authors = ["Tinco Andringa <mail@tinco.nl>"]
+authors = [
+	"Tinco Andringa <mail@tinco.nl>",
+	"Gijsbert dos Santos<gijsbert26@gmail.com>"
+]
+
+[[bin]]
+name = "piston-test"
+
+[dependencies.piston]
+git = "https://github.com/PistonDevelopers/piston.git"
+
+[dependencies.piston2d-graphics]
+git = "https://github.com/PistonDevelopers/graphics.git"
+
+[dependencies.pistoncore-sdl2_window]
+git = "https://github.com/PistonDevelopers/sdl2_window.git"
+
+[dependencies.piston2d-opengl_graphics]
+git = "https://github.com/PistonDevelopers/opengl_graphics.git"
