--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ git = "https://github.com/PistonDevelopers/sdl2_window.git"
 
 [dependencies.piston2d-opengl_graphics]
 git = "https://github.com/PistonDevelopers/opengl_graphics.git"
+
+[dependencies.nphysics]
+features = [ "3df64" ]
+git = "https://github.com/sebcrozet/nphysics"
