--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ git = "https://github.com/PistonDevelopers/sdl2_window.git"
 [dependencies.piston2d-opengl_graphics]
 git = "https://github.com/PistonDevelopers/opengl_graphics.git"
 
-[dependencies.nphysics]
-features = [ "3df64" ]
-git = "https://github.com/sebcrozet/nphysics"
+[dependencies]
+image = "*"
+
+[dependencies.gl]
+git = "https://github.com/bjz/gl-rs"
+#version = "0.0.9"
