--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,13 @@ name = "super-susano"
 [dependencies]
 image = "*"
 
-piston = "0.2.0"
-piston_window = "0.3.0"
-piston2d-graphics = "0.1.4"
-pistoncore-glutin_window = "0.2.0"
-piston2d-opengl_graphics = "0.1.0"
-piston2d-sprite = "0.1.0"
-piston-texture = "0.1.0"
+piston = "*"
+piston_window = "*"
+piston2d-graphics = "*"
+pistoncore-glutin_window = "*"
+piston2d-opengl_graphics = "*"
+piston2d-sprite = "*"
+piston-texture = "*"
 
 [dependencies.pistoncore-sdl2_window]
 git = "https://github.com/PistonDevelopers/sdl2_game_window"
